syntax = "proto3";
package stride.records.v1;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/Stride-Labs/stride/v4/x/records/types/v1";

message UserRedemptionRecord {
  string id = 1; // {chain_id}.{epoch}.{sender}
  string sender = 2;
  string receiver = 3;
  uint64 amount = 4;
  string denom = 5;
  string host_zone_id = 6;
  uint64 epoch_number = 7;
  bool claim_is_pending = 8;
}

message DepositRecord {
  uint64 id = 1;
  int64 amount = 2;
  string denom = 3;
  string host_zone_id = 4;
  enum Status {
    // in transfer queue to be sent to the delegation ICA
    TRANSFER_QUEUE = 0;
    // transfer in progress (IBC packet sent, ack not received)
    TRANSFER_IN_PROGRESS = 2;
    // in staking queue on delegation ICA
    DELEGATION_QUEUE = 1;
    // staking in progress (ICA packet sent, ack not received)
    DELEGATION_IN_PROGRESS = 3;
  }
  enum Source {
    STRIDE = 0;
    WITHDRAWAL_ICA = 1;
  }
  Status status = 5;
  uint64 deposit_epoch_number = 6;
  Source source = 7;

  // reserved 5;
}

message HostZoneUnbonding {
  enum Status {
    // tokens bonded on delegate account
    UNBONDING_QUEUE = 0;
    UNBONDING_IN_PROGRESS = 3;
    // unbonding completed on delegate account
    EXIT_TRANSFER_QUEUE = 1;
    EXIT_TRANSFER_IN_PROGRESS = 4;
    // transfer success
    CLAIMABLE = 2;
  }
  uint64 st_token_amount = 1;
  uint64 native_token_amount = 2;
  string denom = 3;
  string host_zone_id = 4;
  uint64 unbonding_time = 5;
  Status status = 6;
  repeated string user_redemption_records = 7;
}

message EpochUnbondingRecord {
  uint64 epoch_number = 1;
  repeated HostZoneUnbonding host_zone_unbondings = 3;
  reserved 2;
}
