syntax = "proto3";
package stride.stakeibc;

import "gogoproto/gogo.proto";

option go_package = "github.com/Stride-Labs/stride/v9/x/stakeibc/types";

enum LSMDepositStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  DEPOSIT_PENDING = 0;
  TRANSFER_IN_PROGRESS = 1;
  TRANSFER_FAILED = 2;
  DETOKENIZATION_QUEUE = 3;
  DETOKENIZATION_IN_PROGRESS = 4;
  DETOKENIZATION_FAILED = 5;
}

message LSMTokenDeposit {
  string chain_id = 1;
  string denom = 2;
  string validator_address = 3;
  string amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  LSMDepositStatus status = 5;
}
